--- a/gb/20/1/19/n11804649.md
+++ b/gb/20/1/19/n11804649.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/aiaxj298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aiaxj298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aiaxj298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mytgei3586/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵展示光明信仰 老板夫妇想寻求法轮大法</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/200119013808100088-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/200119013808100088-600x400.jpg" />
 <h6>2020年1月18日晚场，首次观看演出的Mike Rice先生和太太Jennifer Rice表示喜欢神韵演出的一切。（新唐人电视台）
 </h6>
 <hr>
-	<p>【大纪元2020年01月19日讯】（大纪元美国底特律记者站报导）“演出太神奇了！” 公司老板Mike Rice观看完<a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>后，眼含热泪的说，“就像其中一则关于命运的箴言：你做了正确的事情，好的事情就会发生；我们正确选择了神韵，现在好事发生了；我们观赏到了，因为神韵演出非凡。”</p>
-<p>1月18日晚，<a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>世界艺术团在底特律歌剧院（Detroit Opera House）进行两场演出。Mike Rice和太太Jennifer Rice表示，喜欢神韵演出的一切。</p>
-<p>太太Jennifer是一名风险管理理赔顾问。她说，“神韵演出贯穿古今，从文化和历史到现代社会，还有<a href="https://github.com/aiaxj298/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md">天堂</a>在世间的展现。神韵太棒了！”</p>
+	<p>【大纪元2020年01月19日讯】（大纪元美国底特律记者站报导）“演出太神奇了！” 公司老板Mike Rice观看完<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后，眼含热泪的说，“就像其中一则关于命运的箴言：你做了正确的事情，好的事情就会发生；我们正确选择了神韵，现在好事发生了；我们观赏到了，因为神韵演出非凡。”</p>
+<p>1月18日晚，<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在底特律歌剧院（Detroit Opera House）进行两场演出。Mike Rice和太太Jennifer Rice表示，喜欢神韵演出的一切。</p>
+<p>太太Jennifer是一名风险管理理赔顾问。她说，“神韵演出贯穿古今，从文化和历史到现代社会，还有<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>在世间的展现。神韵太棒了！”</p>
 <p>Rice先生表示：“跟随着演出，有的部分让你热泪盈眶，有的部分让你开怀大笑，每一次都让你惊喜。可以从舞蹈演员的表情中看到笑容和他们所表演的意境。”</p>
 <p>Rice夫妇表示，在节目中感到了平和治愈，想要进一步了解法轮大法。Rice太太说：“演出中展现的有关法轮大法的部分非常美，令我非常感兴趣。他们打坐时，我从中感到了平和以及治愈。我认为所有人都会从中受益。”Rice先生说：“这让我想要寻求法轮大法。”</p>
 <p>对于法轮大法信仰者被中共政权迫害，Rice先生说：“对我来说，神韵演出非常有教育意义。中共政权原来是这样，其实就是这样的。这令我有有恍然大悟的感觉。”</p>
@@ -17,37 +17,46 @@
 	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/19/n11804649.htm">神韵展示光明信仰 老板夫妇想寻求法轮大法</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11779711.htm">网罗最多县市参展 2020台湾灯会抢曝光</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725517.htm">2020台湾灯会  全台9盏“市花”同台竞技</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11452928.htm">搭火车出游 台铁客运量创新高</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/12/n11183086.htm">亲子书展 台观光局推知性好玩展摊</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/27/n11005568.htm">花莲太平洋灯会猪光宝气耀洄澜绚丽登场</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798622.htm">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803294.htm">将习近平名字译成不雅称呼 脸书发声明道歉</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803161.htm">开豪车游故宫 红三代耍特权惹众怒</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11802910.htm">贵州化工厂燃爆 天空被映红 居民急撤离</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/24/n7677815.htm">家有贤妻  福荫陶门几代人！</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776367.htm">“贤”的简化汉字 暗藏什么可怕后果？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777539.htm">“蓝出于青”的幽默才子纪晓岚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801219.htm">大陆多座城市医院启动一级防护 传医护中招</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801004.htm">习议“领导更替” 美媒：北京陷接班人怪圈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11799146.htm">中共签署屈辱条例？网络民间热议</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11799432.htm">《新闻拍案惊奇》观众Q&#038;A 如何注册会员？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777359.htm">【罗厨寻味】年菜系列之三：红烧圆蹄</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803234.htm">【热点互动】美中贸易停火期能维持多久?</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11800385.htm">美国白狗生了8只小狗 有一只竟是绿色的</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11799718.htm">大陆男子用牙膏画人像 关灯后令人惊叹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801405.htm">浙江卫视主持收恐吓包裹 或与高以翔猝逝有关</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798667.htm">《好莱坞往事》大陆撤档 导演昆汀首次回应</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798856.htm">咳嗽不停众星躲避 陈家乐声明：不是武汉肺炎</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/11/n11784775.md#1">一开演就哭了 公共设施主管赞神韵太动人</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/15/n11795189.md#1">神韵大急流城落幕 主流：相信创世主会归来</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/15/n11795643.md#1">室内设计师观神韵：盼神传文化早日回归</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/16/n11797144.md#1">领导力培训师：神韵触及人全方位的感官</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/16/n11797856.md#1">神韵莫德斯托第二场座无虚席 伯克利将加演</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/17/n11799856.md#1">“回归神路” 美国航机长夫妇观神韵受启迪</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11804649.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/9/n10377672.md#1" target="_blank">林辉：民国三位大师眼中的共产主义很可怕</a></li><li><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238180.md#1" target="_blank">感恩法轮功师父 教我做个善良人</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/11/n12541883.md#1">突出部之役 巴顿将军的神迹之战</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556457.md#1">从《狮子王》经典台词 看天选之王的成长</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561215.md#1">【新闻大家谈】暗助拜登 中共自认颠覆世界</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561391.md#1">【重播】川普团队：去除舞弊选票 足以翻转结果</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561563.md#1">【薇羽看世间】川普团队“抽丝剥茧”</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12558221.md#1">【大选更新11.18】林伍德：川普将击败所有对手</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557575.md#1">计算“邮寄选票”后反超 监察员：应停点邮寄选票</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559329.md#1">密歇根韦恩县认证选举结果反转内幕曝光</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559155.md#1">孙俪晒六岁女儿毛笔字 小花版千字文字体工整</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556222.md#1">珉豪军中回忆有TWICE的歌 感谢女团给士兵力量</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556732.md#1">林青霞生日出新书 帖文证实与富商丈夫情未变</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12557059.md#1">土国表妹确诊染疫 吴凤叹病毒把多国变成地狱</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560394.md#1">姜素拉怀孕获公司证实 孩子预计明年4月出生</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557834.md#1">【美食天堂】4种方法长久保存姜～几个月都新鲜！</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557479.md#1">全球最后一只白色长颈鹿 加装GPS追踪器</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557985.md#1">45亿年历史陨石砸破屋顶 印尼男子变大富翁</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556081.md#1">凡士林不只保湿 有5大妙用 挑选看1点</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550494.md#1">冷藏肉与冷冻肉不一样 购买时要睁大眼睛</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/19/n11804649.htm">神韵展示光明信仰 老板夫妇想寻求法轮大法</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mytgei3586/djy/blob/master/gb/20/1/19/n11804649.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
